--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="stylesheet" href="/src/style.scss"/>
+    <link rel="stylesheet" href="/src/nav.scss"/>
+    <link rel="stylesheet" href="/src/footer.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="YourTour, Тур, Истории, Путешествия, Прогулки, Stories, Travels, Experiences, Adventures">
     <title>YourTour</title>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
-    <div id="root">
-
+    <div>
+      <nav>
+        <div id="nav-menu">
+          <img src="/YourTour.svg" width="181.84px" height="30.24" alt="YourTour"/>
+          <div id="nav-links">
+            <nav-link class="p-med">Туры</nav-link>
+            <nav-link class="p-med">Создать тур</nav-link>
+            <nav-link class="p-med">Отзывы</nav-link>
+            <nav-link class="p-med">Истории</nav-link>
+          </div>
+          <p id="phone-number" class="p-med">+7 999 999 99 99</p>
+        </div>
+      </nav>
+      <main>
+        <p>
+          mmm
+        </p>
+      </main>
+      <footer>foot</footer>
     </div>
   </body>
 </html>
