--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@
           abc
         </p>
       </main>
-      <footer>foot</footer>
+      <footer>
+        <div id="footer-menu">
+          <p id="footer-title" class="p-med">Наши социальные сети</p>
+          <div id="footer-links">
+            <footer-lc>
+              <img src="/instagram.svg" width="14" height="14" />
+              <footer-link class="p-med">instagram</footer-link>
+            </footer-lc>
+            <footer-lc>
+              <img src="/facebook.svg" width="8" height="17" />
+              <footer-link class="p-med">facebook</footer-link>
+            </footer-lc>
+            <footer-lc>
+              <img src="/vk.svg" width="20" height="12" />
+              <footer-link class="p-med">vkontakte</footer-link>
+            </footer-lc>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
