--- a/index.html
+++ b/index.html
@@ -26,8 +26,26 @@
         </div>
       </nav>
       <main>
-        <p>
-          abc
+        <p style="height: 400px">
+          splash
+        </p>
+        <p style="height: 400px">
+          choose
+        </p>
+        <p style="height: 500px">
+          make
+        </p>
+        <p style="height: 300px">
+          reviews
+        </p>
+        <p style="height: 600px">
+          photos
+        </p>
+        <p style="height: 400px">
+          stories
+        </p>
+        <p style="height: 200px">
+          contacts
         </p>
       </main>
       <footer>
@@ -35,15 +53,15 @@
           <p id="footer-title" class="p-med">Наши социальные сети</p>
           <div id="footer-links">
             <footer-lc>
-              <img src="/instagram.svg" width="14" height="14" />
+              <img src="/instagram.svg" width="14" height="14" alt="instagram logo" />
               <footer-link class="p-med">instagram</footer-link>
             </footer-lc>
             <footer-lc>
-              <img src="/facebook.svg" width="8" height="17" />
+              <img src="/facebook.svg" width="8" height="17" alt="facebook logo" />
               <footer-link class="p-med">facebook</footer-link>
             </footer-lc>
             <footer-lc>
-              <img src="/vk.svg" width="20" height="12" />
+              <img src="/vk.svg" width="20" height="12" alt="vkontakte logo" />
               <footer-link class="p-med">vkontakte</footer-link>
             </footer-lc>
           </div>
