add navbar movement, create splash advert

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <link rel="stylesheet" href="/src/style.scss"/>
     <link rel="stylesheet" href="/src/nav.scss"/>
     <link rel="stylesheet" href="/src/footer.scss"/>
+    <link rel="stylesheet" href="/src/content.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="YourTour, Тур, Истории, Путешествия, Прогулки, Stories, Travels, Experiences, Adventures">
     <title>YourTour</title>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
+    <div id="observe-point"/>
     <div>
+      <div class="splash"/>
       <nav>
         <div id="nav-menu">
-          <img src="/YourTour.svg" width="181.84px" height="30.24" alt="YourTour"/>
+          <img src="/YourTour.svg" id="nav-logo" alt="YourTour"/>
           <div id="nav-links">
             <nav-link class="p-med">Туры</nav-link>
             <nav-link class="p-med">Создать тур</nav-link>
@@ -26,9 +29,13 @@
         </div>
       </nav>
       <main>
-        <p style="height: 400px">
-          splash
-        </p>
+        <div class="splash-ad">
+          <h1>
+            Идеальные путешествия существуют
+          </h1>
+          <p id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
+          <button >Найти тур</button>
+        </div>
         <p style="height: 400px">
           choose
         </p>
