complete the splash ad

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Идеальные путешествия существуют
           </h1>
           <p id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
-          <button >Найти тур</button>
+          <button class="mat-button bt-small p-sm" id="splash-bt">Найти тур</button>
         </div>
         <p style="height: 400px">
           choose
