start tour selection

--- a/index.html
+++ b/index.html
@@ -36,8 +36,21 @@
           <p id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
           <button class="mat-button bt-small p-sm" id="splash-bt">Найти тур</button>
         </div>
+        <div id="chooser-container">
+          <h2>Выбери свой тур</h2>
+          <div id="tabs">
+            <tab class="p-big">Популярные</tab>
+            <tab class="p-big">Авторские</tab>
+            <tab class="p-big">Походы</tab>
+            <tab class="p-big">Сплавы</tab>
+            <tab class="p-big">Велопрогулки</tab>
+          </div>
+          <div>
+
+          </div>
+        </div>
         <p style="height: 400px">
-          choose
+
         </p>
         <p style="height: 500px">
           make
