fix text rendering, continue working on chooser

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
     <div class="splash"/>
     <nav>
         <div id="nav-menu">
-            <img src="/YourTour.svg" id="nav-logo" alt="YourTour"/>
+            <div id="nav-logo"></div>
             <div id="nav-links">
                 <nav-link class="p-med">Туры</nav-link>
                 <nav-link class="p-med">Создать тур</nav-link>
                 <nav-link class="p-med">Отзывы</nav-link>
                 <nav-link class="p-med">Истории</nav-link>
             </div>
-            <p id="phone-number" class="p-med">+7 999 999 99 99</p>
+            <div id="phone-number" class="p-med">+7 999 999 99 99</div>
         </div>
     </nav>
     <main>
         <div class="splash-ad">
-            <h1>
+            <div class="t-h1">
                 Идеальные путешествия существуют
-            </h1>
-            <p id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения
-                кадров</p>
+            </div>
+            <div id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения
+                кадров</div>
             <button class="mat-button bt-small p-sm" id="splash-bt">Найти тур</button>
         </div>
         <div id="chooser-container">
-            <h2>Выбери свой тур</h2>
+            <div class="t-h2">Выбери свой тур</div>
             <div id="tabs">
                 <tab class="p-big" active>Популярные</tab>
                 <tab class="p-big">Авторские</tab>
@@ -51,48 +51,48 @@
                 <chooser-card>
                     <div id="ch1" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <h3 class="chooser-h">Путешествие в горы</h3>
-                        <p class="p-sm chooser-p">от 80 000 руб</p>
-                        <button class="mat-button bt-small p-sm">Подробнее</button>
+                        <div class="t-h3 chooser-h">Путешествие в горы</div>
+                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
                 </chooser-card>
                 <chooser-card>
                     <div id="ch2" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <h3 class="chooser-h">Путешествие в горы</h3>
-                        <p class="p-sm chooser-p">от 80 000 руб</p>
+                        <div class="t-h3 chooser-h">Путешествие в горы</div>
+                        <div class="p-sm chooser-p">от 80 000 руб</div>
                         <button class="mat-button bt-small p-sm">Подробнее</button>
                     </div>
                 </chooser-card>
                 <chooser-card>
                     <div id="ch3" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <h3 class="chooser-h">Путешествие в горы</h3>
-                        <p class="p-sm chooser-p">от 80 000 руб</p>
+                        <div class="t-h3 chooser-h">Путешествие в горы</div>
+                        <div class="p-sm chooser-p">от 80 000 руб</div>
                         <button class="mat-button bt-small p-sm">Подробнее</button>
                     </div>
                 </chooser-card>
                 <chooser-card>
                     <div id="ch4" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <h3 class="chooser-h">Путешествие в горы</h3>
-                        <p class="p-sm chooser-p">от 80 000 руб</p>
+                        <div class="t-h3 chooser-h">Путешествие в горы</div>
+                        <div class="p-sm chooser-p">от 80 000 руб</div>
                         <button class="mat-button bt-small p-sm">Подробнее</button>
                     </div>
                 </chooser-card>
                 <chooser-card>
                     <div id="ch5" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <h3 class="chooser-h">Путешествие в горы</h3>
-                        <p class="p-sm chooser-p">от 80 000 руб</p>
+                        <div class="t-h3 chooser-h">Путешествие в горы</div>
+                        <div class="p-sm chooser-p">от 80 000 руб</div>
                         <button class="mat-button bt-small p-sm">Подробнее</button>
                     </div>
                 </chooser-card>
                 <chooser-card>
                     <div id="ch6" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <h3 class="chooser-h">Путешествие в горы</h3>
-                        <p class="p-sm chooser-p">от 80 000 руб</p>
+                        <div class="t-h3 chooser-h">Путешествие в горы</div>
+                        <div class="p-sm chooser-p">от 80 000 руб</div>
                         <button class="mat-button bt-small p-sm">Подробнее</button>
                     </div>
                 </chooser-card>
