complete the chooser, fix the splash ad

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <main>
         <div class="splash-ad">
-            <div class="t-h1">
+            <div id="splash-t1" class="t-h1">
                 Идеальные путешествия существуют
             </div>
             <div id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения
@@ -61,7 +61,7 @@
                     <div class="chooser-content">
                         <div class="t-h3 chooser-h">Путешествие в горы</div>
                         <div class="p-sm chooser-p">от 80 000 руб</div>
-                        <button class="mat-button bt-small p-sm">Подробнее</button>
+                        <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
                 </chooser-card>
                 <chooser-card>
@@ -69,7 +69,7 @@
                     <div class="chooser-content">
                         <div class="t-h3 chooser-h">Путешествие в горы</div>
                         <div class="p-sm chooser-p">от 80 000 руб</div>
-                        <button class="mat-button bt-small p-sm">Подробнее</button>
+                        <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
                 </chooser-card>
                 <chooser-card>
@@ -77,7 +77,7 @@
                     <div class="chooser-content">
                         <div class="t-h3 chooser-h">Путешествие в горы</div>
                         <div class="p-sm chooser-p">от 80 000 руб</div>
-                        <button class="mat-button bt-small p-sm">Подробнее</button>
+                        <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
                 </chooser-card>
                 <chooser-card>
@@ -85,7 +85,7 @@
                     <div class="chooser-content">
                         <div class="t-h3 chooser-h">Путешествие в горы</div>
                         <div class="p-sm chooser-p">от 80 000 руб</div>
-                        <button class="mat-button bt-small p-sm">Подробнее</button>
+                        <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
                 </chooser-card>
                 <chooser-card>
@@ -93,7 +93,7 @@
                     <div class="chooser-content">
                         <div class="t-h3 chooser-h">Путешествие в горы</div>
                         <div class="p-sm chooser-p">от 80 000 руб</div>
-                        <button class="mat-button bt-small p-sm">Подробнее</button>
+                        <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
                 </chooser-card>
             </div>
