--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button class="mat-button bt-small p-sm" id="splash-bt">Найти тур</button>
         </div>
         <div id="chooser-container">
-            <div class="t-h2">Выбери свой тур</div>
+            <div class="t-h2 chooser-ad">Выбери свой тур</div>
             <div id="tabs">
                 <tab class="p-big" active>Популярные</tab>
                 <tab class="p-big">Авторские</tab>
