start making maker form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/footer.scss"/>
     <link rel="stylesheet" href="/src/splash.scss"/>
     <link rel="stylesheet" href="/src/chooser.scss"/>
+    <link rel="stylesheet" href="/src/maker.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords"
           content="YourTour, Тур, Истории, Путешествия, Прогулки, Stories, Travels, Experiences, Adventures">
@@ -98,12 +99,13 @@
                 </chooser-card>
             </div>
         </div>
-        <p style="height: 400px">
+        <div id="maker-container">
+            <div class="t-h2 maker-ad">Собери свой тур</div>
+            <div class="p-med maker-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <form class="maker-form">
 
-        </p>
-        <p style="height: 500px">
-            make
-        </p>
+            </form>
+        </div>
         <p style="height: 300px">
             reviews
         </p>
