--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <script type="module" src="/src/main.ts"></script>
 <div>
-    <div class="splash"/>
+    <div class="splash"></div>
     <nav>
         <div id="nav-menu">
             <div id="nav-logo"></div>
@@ -103,7 +103,44 @@
             <div class="t-h2 maker-ad">Собери свой тур</div>
             <div class="p-med maker-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
             <form class="maker-form">
-
+                <div class="maker-field">
+                    <label class="p-med" for="maker-name">Имя</label>
+                    <input id="maker-name" class="maker-input" type="text" placeholder="Введите Ваше имя"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-dest">Направления</label>
+                    <input id="maker-dest" class="maker-input" type="text" placeholder="Куда хотите ехать"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-email">Email</label>
+                    <input id="maker-email" class="maker-input" type="text" placeholder="example@mail.com"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-phone">Телефон</label>
+                    <input id="maker-phone" class="maker-input" type="text" placeholder="+ 7 (___) ___-__-__"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-from">Дата от</label>
+                    <input id="maker-from" class="maker-input" type="text" placeholder="ДД.ММ.ГГГГ"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-to">Дата до</label>
+                    <input id="maker-to" class="maker-input" type="text" placeholder="ДД.ММ.ГГГГ"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-com">Комментарий</label>
+                    <input id="maker-com" class="maker-input" type="text"/>
+                </div>
+                <div class="maker-field">
+                    <label class="p-med" for="maker-age">Вам есть 18 лет?</label>
+                    <div id="maker-age" class="radio-container">
+                        <input class="maker-radio" type="radio" value="Да"/>
+                        <input class="maker-radio" type="radio" value="Нет"/>
+                    </div>
+                </div>
+                <input type="checkbox"/>
+                <button class="mat-button">Найти тур</button>
+                <button class="mat-button">Сбросить</button>
             </form>
         </div>
         <p style="height: 300px">
