fix deprecation warnings

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     <input required type="checkbox"><span class="p-sm maker-span" style="color: #A6A6A6">Нажимая кнопку, я принимаю условия <span style="color: #000">Лицензионного договора</span></span>
                 </div>
                 <div class="maker-bt-container">
-                    <button id="maker-bt-1" class="mat-button maker-bt">Найти тур</button>
-                    <button id="maker-bt-2" class="mat-button maker-bt">Сбросить</button>
+                    <button id="maker-bt-1" class="mat-button maker-bt p-med">Найти тур</button>
+                    <button id="maker-bt-2" class="mat-button maker-bt p-med">Сбросить</button>
                 </div>
             </form>
         </div>
