--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
                     <div class="p-big">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития.</div>
                     <div class="reviews-author">
                         <div class="reviews-name">
-
+                            <div class="t-h3">Мария</div>
+                            <div class="p-sm reviews-author-tour">Тур: Вдали от дома</div>
                         </div>
-                        <div class="reviews-photo"></div>
+                        <div class="reviews-photo" id="reviews-author-1"></div>
                     </div>
                 </div>
                 <div class="reviews-card">
@@ -176,9 +177,10 @@
                         <p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития.</p></div>
                     <div class="reviews-author">
                         <div class="reviews-name">
-
+                            <div class="t-h3">Павел</div>
+                            <div class="p-sm reviews-author-tour">Тур: Путешествие в горы</div>
                         </div>
-                        <div class="reviews-photo"></div>
+                        <div class="reviews-photo" id="reviews-author-2"></div>
                     </div>
                 </div>
             </div>
