--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/src/chooser.scss"/>
     <link rel="stylesheet" href="/src/maker.scss"/>
     <link rel="stylesheet" href="/src/reviews.scss"/>
+    <link rel="stylesheet" href="/src/adventures.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords"
           content="YourTour, Тур, Истории, Путешествия, Прогулки, Stories, Travels, Experiences, Adventures">
@@ -185,9 +186,25 @@
                 </div>
             </div>
         </div>
-        <p style="height: 600px">
-            photos
-        </p>
+        <div id="adventures-container">
+            <div class="t-h2" id="adventures-ad">Фотографии путешествий</div>
+            <div class="p-med" id="adventures-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <div id="adventures-cards">
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-1"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-2"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-3"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-4"></div>
+                <div class="adventures-card adventures-card-even-row" id="adventures-card-5"></div>
+                <div class="adventures-card adventures-card-even-row" id="adventures-card-6"></div>
+                <div class="adventures-card adventures-card-even-row" id="adventures-card-7"></div>
+                <div class="adventures-card adventures-card-even-row" id="adventures-card-8"></div>
+                <div class="adventures-card adventures-card-even-row" id="adventures-card-9"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-10"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-11"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-12"></div>
+                <div class="adventures-card adventures-card-odd-row" id="adventures-card-13"></div>
+            </div>
+        </div>
         <p style="height: 400px">
             stories
         </p>
