--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="/src/maker.scss"/>
     <link rel="stylesheet" href="/src/reviews.scss"/>
     <link rel="stylesheet" href="/src/adventures.scss"/>
+    <link rel="stylesheet" href="/src/stories.scss"/>
+    <link rel="stylesheet" href="/src/contacts.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords"
           content="YourTour, Тур, Истории, Путешествия, Прогулки, Stories, Travels, Experiences, Adventures">
@@ -205,9 +207,38 @@
                 <div class="adventures-card adventures-card-odd-row" id="adventures-card-13"></div>
             </div>
         </div>
-        <p style="height: 400px">
-            stories
-        </p>
+        <div id="stories-container">
+            <div class="t-h2" id="stories-ad">Истории путешествий</div>
+            <div class="p-med" id="stories-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <div class="stories-cards">
+                <div class="stories-card">
+                    <div class="stories-back" id="stories-card-1"></div>
+                    <div class="stories-card-content">
+                        <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
+                        <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений:</div>
+                        <ul class="p-med stories-card-p">
+                            <li>вкусная еда</li>
+                            <li>дешевый транспорт</li>
+                            <li>красивый город.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="stories-card">
+                    <div class="stories-back" id="stories-card-2"></div>
+                    <div class="stories-card-content">
+                        <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
+                        <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</div>
+                    </div>
+                </div>
+                <div class="stories-card">
+                    <div class="stories-back" id="stories-card-3"></div>
+                    <div class="stories-card-content">
+                        <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
+                        <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p style="height: 200px">
             contacts
         </p>
